--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <com.example.diplom_0_1.BookParagraphView
+    <view class="com.example.diplom_0_1.BookParagraphView"
         android:id="@+id/textViewRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
