added new packages

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/translatingFragment"
-        android:name="com.example.diplom_0_1.TranslatingFragment"
+        android:name="com.example.diplom_0_1.fragments.TranslatingFragment"
         android:label="fragment_translating"
         tools:layout="@layout/fragment_translating"
         android:layout_width="wrap_content"
