--- a/app/src/main/res/layout/fragment_dictionaries.xml
+++ b/app/src/main/res/layout/fragment_dictionaries.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.DictionariesFragment">
 
     <ScrollView
@@ -24,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@android:drawable/alert_dark_frame" />
+        android:src="@drawable/baseline_add_black_24dp"
+        app:maxImageSize="50dp"
+        />
 
 </FrameLayout>
