--- a/app/src/main/res/values/myTheme.xml
+++ b/app/src/main/res/values/myTheme.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MyTheme" parent="Base.Theme.Diplom_0_1">
+    <style name="RedTheme" parent="Base.Theme.Diplom_0_1">
         <item name="colorPrimary">@color/red</item>
         <item name="colorPrimaryDark">@color/dark_red</item>
         <item name="colorAccent">@color/red</item>
         <item name="colorSecondary">@color/black</item>
+        <item name="colorButtonNormal">@color/red</item>
+    </style>
+    <style name="GreenTheme" parent="Base.Theme.Diplom_0_1">
+        <item name="colorPrimary">@color/dark_green</item>
+        <item name="colorPrimaryDark">@color/dark_green</item>
+        <item name="colorAccent">@color/green</item>
+        <item name="colorSecondary">@color/green</item>
+    </style>
+    <style name="BlueTheme" parent="Base.Theme.Diplom_0_1">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/blue</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorBackgroundFloating">@color/blue</item>
     </style>
 </resources>
