--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="dark_green">#FF008b00</color>
     <color name="blue">#FF0000FF</color>
     <color name="dark_blue">#FF00008b</color>
+    <color name="yellow">#FFFFD700</color>
+    <color name="orange">#FFFFA500</color>
+    <color name="gray">#FF808080</color>
+    <color name="aqua">#FF00FFFF</color>
+    <color name="silver">#FFC0C0C0</color>
 </resources>
