--- a/app/src/main/res/values/myTheme.xml
+++ b/app/src/main/res/values/myTheme.xml
@@ -5,19 +5,17 @@
         <item name="colorPrimaryDark">@color/dark_red</item>
         <item name="colorAccent">@color/red</item>
         <item name="colorSecondary">@color/black</item>
-        <item name="colorButtonNormal">@color/red</item>
     </style>
-    <style name="GreenTheme" parent="Base.Theme.Diplom_0_1">
-        <item name="colorPrimary">@color/dark_green</item>
-        <item name="colorPrimaryDark">@color/dark_green</item>
-        <item name="colorAccent">@color/green</item>
-        <item name="colorSecondary">@color/green</item>
+    <style name="GrayTheme." parent="Base.Theme.Diplom_0_1">
+        <item name="colorPrimary">@color/silver</item>
+        <item name="colorPrimaryDark">@color/gray</item>
+        <item name="colorAccent">@color/silver</item>
+        <item name="colorSecondary">@color/black</item>
     </style>
     <style name="BlueTheme" parent="Base.Theme.Diplom_0_1">
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryDark">@color/dark_blue</item>
         <item name="colorAccent">@color/blue</item>
-        <item name="colorSecondary">@color/black</item>
-        <item name="colorBackgroundFloating">@color/blue</item>
+        <item name="colorSecondary">@color/dark_blue</item>
     </style>
 </resources>
